testing reformatted laptop

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="board">
         <div id="score-board"> Score Board
-            <p id = "score">Cucoos 0</p>
+            <p id = "score">Cuccos 0</p>
             <p id = 'rupeesScore'>Rupees 0</p> 
         </div>
     </div>
