editing sound to work in deployment

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
 </head>
 <body>
-    <div id="board">
+    <div id="board"></div>
         <div id="score-board"> Score Board
             <p id = "score">Cuccos 0</p>
             <p id = 'rupeesScore'>Rupees 0</p> 
         </div>
-    </div>
     <script src="./js/main.js"></script>
 </body>
 </html>
